--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "electron-vite preview",
     "start": "electron-vite preview",
     "typecheck": "tsc --noEmit",
-    "dist:win": "npm run build && electron-builder --win nsis"
+    "dist:win": "npm run build && electron-builder --win nsis",
+    "web": "vite --config vite.web.config.ts"
   },
   "repository": {
     "type": "git",
