Implement full-screen capture feature and enhance configuration
- Added IPC handler for full-screen capture in main process.
- Updated preload script to expose capture API to the renderer.
- Modified renderer API to include full-screen capture functionality.
- Enhanced configuration page to manage capture settings and display captured images.
- Introduced new sample images for testing capture functionality.
- Refactored scaling functions to accommodate dynamic stage sizes.

--- a/package.json
+++ b/package.json
@@ -13,36 +13,19 @@
     "web": "vite serve --config vite.web.config.ts",
     "dist:win": "npm run build && electron-builder --win nsis"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gcobc27746/implant-snap.git"
-  },
+  "repository": {"type": "git", "url": "git+https://github.com/gcobc27746/implant-snap.git"},
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gcobc27746/implant-snap/issues"
-  },
+  "bugs": {"url": "https://github.com/gcobc27746/implant-snap/issues"},
   "homepage": "https://github.com/gcobc27746/implant-snap#readme",
   "build": {
     "appId": "com.implantsnap.app",
     "productName": "ImplantSnap",
-    "directories": {
-      "output": "dist"
-    },
-    "files": [
-      "out/**/*",
-      "package.json"
-    ],
-    "win": {
-      "target": [
-        "nsis"
-      ]
-    },
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true
-    }
+    "directories": {"output": "dist"},
+    "files": ["out/**/*", "package.json"],
+    "win": {"target": ["nsis"]},
+    "nsis": {"oneClick": false, "allowToChangeInstallationDirectory": true}
   },
   "dependencies": {
     "electron-store": "^11.0.2",
