--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
       "out/**/*",
       "package.json"
     ],
+    "extraResources": [
+      { "from": "resources/icon.png", "to": "icon.png" }
+    ],
     "win": {
+      "icon": "resources/icon.png",
       "target": [
         "nsis"
       ]
