chore: set releaseType to release for auto-publish

--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "publish": {
       "provider": "github",
       "owner": "gcobc27746",
-      "repo": "implant-snap"
+      "repo": "implant-snap",
+      "releaseType": "release"
     }
   },
   "dependencies": {
